<?xml version="1.0"?>
<package>
  <name>mrl_ipcamera</name>
  <version>2.6.0</version>

  <description>
    Simple node to publish regular IP camera video streams to a ros topic.
  </description>

  <author>Alireza Hosseini</author>

  <maintainer email="alireza.mixedreality@gmail.com">Alireza Hosseini</maintainer>

  <license>GPL</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- runtime dependencies -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>


</package>
